trunk/Archive2/5a/b88537a81e9b26/output
main.cpp:9:1: error: static_assert failed "expected to be POD"
static_assert(std::is_pod<target>::value,   "expected to be POD");
^             ~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:10:1: error: static_assert failed "expected to be POD"
static_assert(boost::is_pod<target>::value, "expected to be POD");
^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
